// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt templates > buildPrompt 1`] = `
"你是开发工程师。请按照实施计划完成代码变更。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能

请先阅读:
- .claude-plan/issue-42/01-plan.md (完整实施计划，包含需求分析、系统设计和 Todolist)
- AGENTS.md (项目架构和代码规范)

## 实施要求
1. 严格按照 01-plan.md 中的 Todolist 逐项完成
2. 每完成一项，更新 01-plan.md 中对应的勾选状态 (- [ ] → - [x])
3. 严格遵循 AGENTS.md 中的代码规范（2空格缩进、120字符行宽、命名规范等）
4. 不要过度工程化，只实现计划中要求的内容
5. 确保代码安全，避免 OWASP Top 10 漏洞"
`;

exports[`prompt templates > conflictResolvePrompt 1`] = `
"你是一名资深开发工程师，正在处理 Git rebase 过程中产生的合并冲突。

## 背景
- Issue IID: #42
- 分支: \`feat/issue-42\` 正在 rebase 到 \`master\`
- 冲突文件列表:
- \`src/index.ts\`
- \`src/config.ts\`
- \`package.json\`

## 任务
请逐一解决上述冲突文件：

1. 打开每个冲突文件，仔细阅读冲突标记（<<<<<<< HEAD / ======= / >>>>>>> ...）
2. 理解双方修改的意图：
   - HEAD（当前分支）的修改目的
   - 对方分支的修改目的
3. 正确合并代码，确保：
   - 保留双方有意义的修改
   - 完全移除所有冲突标记（<<<<<<<, =======, >>>>>>>）
   - 合并后的代码逻辑完整、可编译、可运行
4. 如果某个文件的冲突涉及结构性变更（如函数签名变化），确保所有引用处也同步更新

## 注意事项
- 不要遗漏任何冲突标记
- 不要引入新的 bug
- 保持代码风格一致
- 只修改冲突文件，不要做额外的代码改动"
`;

exports[`prompt templates > demandToPromptContext with full supplement 1`] = `
{
  "description": "实现用户登录功能",
  "displayId": "42",
  "supplementText": "## 补充信息

### 补充需求说明
支持微信和 QQ 登录

### 验收标准
通过率 100%

### 变更范围
auth 模块

### 约束条件
不能修改数据库 schema

### 参考链接
https://wiki.example.com/login-spec

### 其他补充
注意兼容老版本",
  "title": "添加用户登录",
}
`;

exports[`prompt templates > demandToPromptContext without supplement 1`] = `
{
  "description": "页面崩溃",
  "displayId": "99",
  "supplementText": "",
  "title": "修复 Bug",
}
`;

exports[`prompt templates > e2eVerifyPromptSuffix with ports 1`] = `
"

## 浏览器验收
请用公开 Playwright Test 补齐 Chromium 测试，覆盖 Issue #42 的验收标准。
预览地址：http://127.0.0.1:9001
服务端会独立运行测试，并依据实际退出码及报告判定通过。请勿用文字声明代替测试结果。"
`;

exports[`prompt templates > e2eVerifyPromptSuffix without ports 1`] = `
"

## 浏览器验收
请用公开 Playwright Test 补齐 Chromium 测试，覆盖 Issue #42 的验收标准。
服务端会独立运行测试，并依据实际退出码及报告判定通过。请勿用文字声明代替测试结果。"
`;

exports[`prompt templates > getKnowledgeForPrompt returns deterministic map 1`] = `
{
  "buildCommand": "npm run build",
  "codeStyleDescription": "2空格缩进、120字符行宽、命名规范等",
  "dependencyCheckPath": "node_modules/.bin/eslint",
  "e2eDir": "frontend/e2e/dynamic",
  "e2eTool": "Playwright",
  "frontendDir": ".",
  "installCommand": "npm install",
  "installFallbackCommand": "npm install",
  "knownIssuesSection": "- 无已知预存问题",
  "lintCommand": "npm run lint",
  "testCommand": "npm test",
  "testFilesCommand": "npm test -- {files}",
}
`;

exports[`prompt templates > issueProgressComment - completed 1`] = `
"✅ **自动处理进度更新**

阶段: **verify** — 已完成"
`;

exports[`prompt templates > issueProgressComment - failed with detail 1`] = `
"💻 **自动处理进度更新**

阶段: **implement** — 失败

AI 超时: 30分钟限制已到"
`;

exports[`prompt templates > issueProgressComment - in progress 1`] = `
"🔍 **自动处理进度更新**

阶段: **analysis** — 进行中"
`;

exports[`prompt templates > planModeVerifyPrompt 1`] = `
"你是**严格的**测试工程师。验证代码变更的正确性。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能

## 幂等性检查（最先执行）
在执行任何操作之前，先检查是否已存在验证报告：
1. 读取 .claude-plan/issue-42/02-verify-report.md（如果存在）
2. 如果报告存在且"总结"部分包含"验证通过"，则**直接结束**，不要重复执行任何验证步骤
3. 如果报告不存在或总结为"验证失败"，继续执行下面的验证步骤

**重要**：此检查的目的是防止重复执行导致破坏性操作（如删除已通过的测试文件）。

## 前置检查
在执行验证前，先确认依赖环境:
1. 检查 node_modules/.bin/eslint 是否存在
2. 如不存在，运行 npm install；如果失败，尝试 npm install
3. 如果依赖始终无法安装完整，在报告中标注为"环境问题"并继续后续检查

## 验证步骤
1. 运行 npm run lint 检查代码风格
2. 运行 npm run build 检查编译
3. 运行 npm test -- {files} 运行相关测试
4. 检查代码变更与 .claude-plan/issue-42/01-plan.md 实施计划的一致性
5. **严格检查** .claude-plan/issue-42/01-plan.md 中 Todolist 是否**所有项**都已完成（- [x]）

## 已知的预存问题（忽略即可）
- 无已知预存问题
- 如果某个 lint/build/test 的失败**不涉及本次变更的文件**，标注为"预存问题"

## 验证标准（必须全部满足才算通过）
- Lint 零错误（本次变更相关）
- Build 成功
- 所有测试通过
- Todolist 100% 完成（无未勾选项）
- 代码符合实施计划

将验证结果写入 .claude-plan/issue-42/02-verify-report.md，**必须**包括以下各节：
- **Lint 结果**: 通过/失败 + 详情（区分本次变更 vs 预存问题）
- **Build 结果**: 通过/失败 + 详情（区分本次变更 vs 预存问题）
- **Test 结果**: 通过/失败 + 详情
- **Todolist 检查**: X/Y 项完成 + 未完成项列表
- **计划一致性检查**: 是否符合实施计划
- **总结**: 验证通过/验证失败 + 具体原因

**重要**: 如果任何一项检查失败，必须在"总结"中明确写"验证失败"。"
`;

exports[`prompt templates > planPrompt with supplement 1`] = `
"你是资深技术负责人。请一次性完成需求分析和方案设计。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 输出要求
请先阅读项目根目录的 AGENTS.md 了解项目架构，再进行分析和设计。

请制定一份完整的实施计划，内容包括：

### 第一部分：需求分析
1. **需求概述** — 用简洁的语言总结需求目标
2. **功能点拆解** — 列出需要实现的具体功能点
3. **影响范围分析** — 哪些模块/文件可能受到影响
4. **非功能需求** — 性能、安全、兼容性等方面的考量
5. **风险和依赖** — 潜在风险和外部依赖

### 第二部分：系统设计
1. **方案概述** — 整体设计思路
2. **涉及的文件和模块** — 需要新建/修改的文件列表
3. **数据模型变更** — 数据库或模型层的变更
4. **接口设计** — API 接口定义
5. **详细实施步骤** — 按顺序列出实施步骤

### 第三部分：实施 Todolist
- [ ] 步骤1: 具体描述
- [ ] 步骤2: 具体描述
...

请确保 Todolist 足够详细，每个步骤可独立执行和验证。
不要修改任何代码文件。
实施 Todolist 只包含编码代理在 build/verify 阶段能够实际完成的代码、测试、文档与检查，步骤数量按需求复杂度确定。
计划审核、正式 UAT、Git 提交/推送和 PR 创建由外层工作台执行，须放在独立的后续流程说明中，不能列为待勾选项；尤其不能要求在 verify 之前完成 PR 创建。
本地浏览器自检可以列入实施清单，但不能替代工作台后续生成的正式 UAT 结果。"
`;

exports[`prompt templates > planPrompt without supplement 1`] = `
"你是资深技术负责人。请一次性完成需求分析和方案设计。

## Issue 信息
- IID: #99
- 标题: 修复首页加载缓慢问题
- 描述:
首页加载超过 5 秒，需要优化

## 输出要求
请先阅读项目根目录的 AGENTS.md 了解项目架构，再进行分析和设计。

请制定一份完整的实施计划，内容包括：

### 第一部分：需求分析
1. **需求概述** — 用简洁的语言总结需求目标
2. **功能点拆解** — 列出需要实现的具体功能点
3. **影响范围分析** — 哪些模块/文件可能受到影响
4. **非功能需求** — 性能、安全、兼容性等方面的考量
5. **风险和依赖** — 潜在风险和外部依赖

### 第二部分：系统设计
1. **方案概述** — 整体设计思路
2. **涉及的文件和模块** — 需要新建/修改的文件列表
3. **数据模型变更** — 数据库或模型层的变更
4. **接口设计** — API 接口定义
5. **详细实施步骤** — 按顺序列出实施步骤

### 第三部分：实施 Todolist
- [ ] 步骤1: 具体描述
- [ ] 步骤2: 具体描述
...

请确保 Todolist 足够详细，每个步骤可独立执行和验证。
不要修改任何代码文件。
实施 Todolist 只包含编码代理在 build/verify 阶段能够实际完成的代码、测试、文档与检查，步骤数量按需求复杂度确定。
计划审核、正式 UAT、Git 提交/推送和 PR 创建由外层工作台执行，须放在独立的后续流程说明中，不能列为待勾选项；尤其不能要求在 verify 之前完成 PR 创建。
本地浏览器自检可以列入实施清单，但不能替代工作台后续生成的正式 UAT 结果。"
`;

exports[`prompt templates > rePlanPrompt with latest planSnapshot （只读计划） 1`] = `
"你是资深技术负责人。之前的实施计划未通过审核，请根据审核反馈修改计划。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 审核反馈历史（共 2 轮）
### 第 1 轮 (2024-06-01T10:00:00Z)
第一轮:加索引

### 第 2 轮 (2024-06-01T11:00:00Z)
第二轮:加权限校验

## 上一轮被驳回的实施计划（请基于此做实质性修改，避免与原方案高度雷同）

<rejected-plan>
# V2 方案

这是被驳回的最新版,应进 prompt
</rejected-plan>

请先阅读:
- AGENTS.md (项目架构)

上文已直接给出上一轮被驳回的方案全文，请基于该方案对照反馈做修改。

## 输出要求
请基于上一轮被驳回的实施计划做实质性修改：
- 针对每条审核反馈给出可验证的调整（说明改了什么、为什么、影响范围）
- 不要原样照搬被驳回方案，也不要只做措辞润色
- 避免空洞口号（如"提升健壮性"），代之以具体的设计/接口/步骤/验收标准

请输出修改后的完整新版实施计划，保持相同的文档结构。
重点关注最新一轮的反馈，同时确保之前轮次提出的问题也已得到解决。
不要修改任何代码文件。
实施 Todolist 只包含编码代理在 build/verify 阶段能够实际完成的代码、测试、文档与检查，步骤数量按需求复杂度确定。
计划审核、正式 UAT、Git 提交/推送和 PR 创建由外层工作台执行，须放在独立的后续流程说明中，不能列为待勾选项；尤其不能要求在 verify 之前完成 PR 创建。
本地浏览器自检可以列入实施清单，但不能替代工作台后续生成的正式 UAT 结果。"
`;

exports[`prompt templates > rePlanPrompt with no planSnapshot （无计划快照） 1`] = `
"你是资深技术负责人。之前的实施计划未通过审核，请根据审核反馈修改计划。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 审核反馈历史（共 1 轮）
### 第 1 轮 (2024-06-01T10:00:00Z)
需要补错误处理

请先阅读:
- AGENTS.md (项目架构)

参考之前的审核反馈历史来改进计划。

## 输出要求
请基于上一轮被驳回的实施计划做实质性修改：
- 针对每条审核反馈给出可验证的调整（说明改了什么、为什么、影响范围）
- 不要原样照搬被驳回方案，也不要只做措辞润色
- 避免空洞口号（如"提升健壮性"），代之以具体的设计/接口/步骤/验收标准

请输出修改后的完整新版实施计划，保持相同的文档结构。
重点关注最新一轮的反馈，同时确保之前轮次提出的问题也已得到解决。
不要修改任何代码文件。
实施 Todolist 只包含编码代理在 build/verify 阶段能够实际完成的代码、测试、文档与检查，步骤数量按需求复杂度确定。
计划审核、正式 UAT、Git 提交/推送和 PR 创建由外层工作台执行，须放在独立的后续流程说明中，不能列为待勾选项；尤其不能要求在 verify 之前完成 PR 创建。
本地浏览器自检可以列入实施清单，但不能替代工作台后续生成的正式 UAT 结果。"
`;

exports[`prompt templates > rePlanPrompt with review history 1`] = `
"你是资深技术负责人。之前的实施计划未通过审核，请根据审核反馈修改计划。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 审核反馈历史（共 2 轮）
### 第 1 轮 (2024-06-01T10:00:00Z)
数据库设计需要增加索引

### 第 2 轮 (2024-06-01T11:00:00Z)
API 接口缺少权限校验

请先阅读:
- AGENTS.md (项目架构)

参考之前的审核反馈历史来改进计划。

## 输出要求
请基于上一轮被驳回的实施计划做实质性修改：
- 针对每条审核反馈给出可验证的调整（说明改了什么、为什么、影响范围）
- 不要原样照搬被驳回方案，也不要只做措辞润色
- 避免空洞口号（如"提升健壮性"），代之以具体的设计/接口/步骤/验收标准

请输出修改后的完整新版实施计划，保持相同的文档结构。
重点关注最新一轮的反馈，同时确保之前轮次提出的问题也已得到解决。
不要修改任何代码文件。
实施 Todolist 只包含编码代理在 build/verify 阶段能够实际完成的代码、测试、文档与检查，步骤数量按需求复杂度确定。
计划审核、正式 UAT、Git 提交/推送和 PR 创建由外层工作台执行，须放在独立的后续流程说明中，不能列为待勾选项；尤其不能要求在 verify 之前完成 PR 创建。
本地浏览器自检可以列入实施清单，但不能替代工作台后续生成的正式 UAT 结果。"
`;
